<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tz.co.vanuserve.civilsocieties.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" >
            <argument
                android:name="cso"
                app:argType="tz.co.vanuserve.civilsocieties.data.CivilSociety"
                />

        </action>
        <action
            android:id="@+id/action_navigation_home_to_uploadFragment"
            app:destination="@id/uploadFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_home_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_navigation_home_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="tz.co.vanuserve.civilsocieties.ui.map.MapsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_navigation_dashboard_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="tz.co.vanuserve.civilsocieties.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="tz.co.vanuserve.civilsocieties.ui.home.DetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="cso"
            app:argType="tz.co.vanuserve.civilsocieties.data.CivilSociety" />
        <action
            android:id="@+id/action_detailsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_detailsFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/uploadFragment"
        android:name="tz.co.vanuserve.civilsocieties.ui.upload.UploadFragment"
        android:label="Upload CSO Details"
        tools:layout="@layout/fragment_upload" >
        <action
            android:id="@+id/action_uploadFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="tz.co.vanuserve.civilsocieties.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_uploadFragment"
            app:destination="@id/uploadFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="tz.co.vanuserve.civilsocieties.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_uploadFragment"
            app:destination="@id/uploadFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragmentMain"
        android:name="tz.co.vanuserve.civilsocieties.settings.SettingsFragmentMain"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>